--- a/_posts/2021-03-07-welcome.md
+++ b/_posts/2021-03-07-welcome.md
@@ -3,6 +3,6 @@ layout: post
 title:  "Welcome to bendowdell.com!"
 ---
 
-Welcome to my website! You can learn more about me, what I do, and how I do it on the [about.]({{site.url}}/about) page. Check out some of my projects on my [portfolio.]({{site.url}}/portfolio) and take a look at my [resume.]({{site.url}}/resume) for more on my skills and background.
+Welcome to my website! You can learn more about me, what I do, and how I do it on the [about]({{site.url}}/about) page. Check out some of my projects on my [portfolio]({{site.url}}/portfolio) and take a look at my [resume]({{site.url}}/resume) for more on my skills and background.
 
 I'm a data scientist and software engineer with a background in geophysics and I am passionate about solving problems using code. I'll write posts from time to time about my personal projects as well as things I think might be helpful to others.
