moves draft blog entry to posts

--- a/_posts/2021-04-18-thinkpad.md
+++ b/_posts/2021-04-18-thinkpad.md
@@ -121,7 +121,7 @@ worked well. The integrated mode turns off the Nvidia GPU which will result in
 maximum battery life, while the Compute mode keeps the Nvidia GPU on but keeps
 it purely reserved for computing (like with TensorFlow and PyTorch).
 
-![thinkpad]({{site.url}}/assets/img/ThinkPad/thinkpad_open.jpb)
+![thinkpad]({{site.url}}/assets/img/ThinkPad/thinkpad_open.jpg)
 
 ## My impression so far
 
