--- a/_posts/2021-04-18-thinkpad.md
+++ b/_posts/2021-04-18-thinkpad.md
@@ -25,7 +25,7 @@ reality is that I spend upwards of 95% of my time working in a Linux
 environment. Dual-booting Linux on the M1 is a problem that has not been solved,
 and while I could work acceptably well using MacOS, I just really prefer Linux.
 Buying a new M1 MBP just didn't seem to make sense if I couldn't reliably dual
-boot Linux. I like MacOS a lot, but there aren't any benefits to using it over
+boot Linux. I like MacOS a lot, but for my purposes there aren't any benefits to using it over
 Linux. If I needed to do serious photo, video, or audio editing using Photoshop, Final
 Cut Pro, or Logic Pro, I would definitely want to be using MacOS.
 
@@ -54,12 +54,13 @@ I specified a ThinkPad P1 Gen 3 with a healthy build sheet:
 Mostly, I focused on maxing out performance. While Intel's Core i9 was an
 option, I think the additional cost may not have justified the performance
 boost. I selected as  much memory as could be configured and the Quadro T2000
-over the T1000 for the additional CUDA cores. I did select the base dispaly
+over the T1000 for the additional CUDA cores. I did select the base display
 because I won't be needing ultra high-definition resolution. The top display
-would also likely signficiantly erode battery life, and the midrange display
+would also likely significantly erode battery life, and the midrange display
 included an infrared camera that doesn't seem to work well with most Linux
 distributions. I will use the ThinkPad primarily for data analysis, coding, and
-software engineering, so high-end visuals aren't necessary.
+software engineering, so high-end visuals aren't necessary, and I also was not
+interested in touch-screen capabilities.
 
 Unlike MacBooks, the ThinkPad's bottom cover can be removed and the components
 can be upgraded over time. There is also space for a second internal SSD so I
@@ -113,7 +114,7 @@ in Linux).
 
 Beyond merely having Nvidia support, Pop! has different graphics mode: Integrated, Nvidia,
 Hybrid, and Compute. This is exciting because it means I can reserve all of
-Nvidia's GPU power for computing when I need it and not waste any of it on
+the Nvidia's GPU power for computing when I need it and not waste any of it on
 running the display. This also helps conserve battery life by not using the GPU
 to power the display. Currently I've been running under Hybrid mode which
 prefers the integrated graphics unless the Nvidia GPU is specified, and it has
@@ -158,5 +159,5 @@ after selecting text. I'm a TrackPoint convert, now!
 Using Pop! OS 20.04 LTS so far has also been a positive experience. I'll write a
 little more about it in a separate post, but all of the ThinkPad hardware works
 as expected, including the finger print reader. I really love it when things
-*just work*!
+*just work*, and at least initially, I am very happy with my new ThinkPad!
 
